--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         >
           <span id="search-favicon"></span>
           <input
+            autofocus
             id="searchInput"
             spellcheck="false"
             name="q"
