--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <h1 id="main_header">
         <span id="greeting"></span>
         <div id="weather-container" title="">
-          <span id="weather">Loading ... </span>
-          <span><img id="weather-icon" src="" /></span>
+          <a href="https://openweathermap.org/city?q=Cabimas,Venezuela" target="_blank"><span id="weather">Loading div </span>
+          <span><img id="weather-icon" src="" /></span></a>
         </div>
         <span id="username" onclick="toggleMode()"></span>
       </h1>
