--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h1 id="main_header">
         <span id="greeting"></span>
         <div id="weather-container" title="">
-          <a href="https://openweathermap.org/city?q=Cabimas,Venezuela" target="_blank"><span id="weather">Loading div </span>
+          <a href="https://openweathermap.org/city/3647651" target="_blank"><span id="weather">Loading ... </span>
           <span><img id="weather-icon" src="" /></span></a>
         </div>
         <span id="username" onclick="toggleMode()"></span>
