--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <span id="greeting"></span>
         <div id="weather-container" title="">
           <a href="https://openweathermap.org/city/3647651" target="_blank"><span id="weather">Loading ... </span>
-          <span><img id="weather-icon" src="" /></span></a>
+          <span><img id="weather-icon" data-remote-svg-uri="" class="weather-icon"/></span></a>
         </div>
         <span id="username" onclick="toggleMode()"></span>
       </h1>
