--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           >.<br />
           Weather info from
           <a href="https://openweathermap.org">OpenWeatherMap</a>,icons from
-          <a href="https://icons8.com/icon/set/weather/color-glass">Icons8</a>
+          <a href="https://carbondesignsystem.com/guidelines/icons/contribute/">IBM's Carbon Design System</a>
           and fonts are
           <a href="https://github.com/IBM/plex" target="_blank">IBM Plex</a> and
           <a href="https://github.com/IdreesInc/Monocraft" target="_blank"
