--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <span id="greeting"></span>
       <div id="weather-container" title="">
         <a href="https://openweathermap.org/city/3647651" target="_blank"><span id="weather">Loading ... </span>
-          <img id="weather-icon" data-remote-svg-uri="" class="weather-icon" /></a>
+          <img src="" id="weather-icon" data-remote-svg-uri="" data-remote-svg-class="weather-linea"/></a>
       </div>
       <span id="username" onclick="toggleMode()"></span>
     </h1>
