--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 <body>
   <div class="container">
     <h1 id="main_header">
-      <span id="greeting"></span>
+      Good      
       <div id="weather-container" title="">
         <a href="https://openweathermap.org/city/3647651" target="_blank"><span id="weather">Loading ... </span>
           <img src="" id="weather-icon" data-remote-svg-uri="" data-remote-svg-class="weather-linea"/></a>
       </div>
-      <span id="username" onclick="toggleMode()"></span>
+      <span id="greeting" onclick="toggleMode()"></span>
     </h1>
 
     <div id="vertical-scroll-box">
