--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
   </head>
 
   <body>
-    <div class="container">
-      <h1 id="main_header">
+    <div class="container fade-in">
+      <h1 class="fade-in" id="main_header">
         Good
-        <div id="weather-container" title="">
+        <div class="fade-in-weather" id="weather-container" title="">
           <a href="https://openweathermap.org/city/3647651" target="_blank"
             ><span id="weather">Loading ... </span>
             <img
               src=""
+              class="fade-in-icon"
               id="weather-icon"
               data-remote-svg-uri=""
               data-remote-svg-class="weather-linea"
