--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
             >GPL-3.0 license</a
           >.
         </div>
-        <button title="Info" alt="Info" onclick="buttonClicked()">
-          &#9432;
+        <button class="material-icon" title="Info" alt="Info" onclick="buttonClicked()">
+          info
         </button>
       </div>
     </div>
